derive/tests/snapshots/methods_disabled/AuditEntry/get_all_audit_entries.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `audit_entry` table.
    pub fn get_all_audit_entries<'a>(&'a self) -> impl Iterator<Item = AuditEntry> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().audit_entry().iter()
    }
}
