derive/tests/snapshots/methods_disabled/AuditEntry/get_audit_entries_by_actor_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `AuditEntry` iterator that contains all rows in the `audit_entry` table whose value matches the value from the single-column btree index on the `actor_id` column.
    pub fn get_audit_entries_by_actor_id<'a>(
        &'a self,
        actor_id: &'a u64,
    ) -> impl Iterator<Item = AuditEntry> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().audit_entry().actor_id().filter(actor_id)
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `AuditEntry` iterator that contains all rows in the `audit_entry` table whose value matches the value from the single-column btree index on the `actor_id` column.
    pub fn get_audit_entries_by_actor_id<'a>(
        &'a self,
        actor_id: &'a u64,
    ) -> impl Iterator<Item = AuditEntry> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().audit_entry().actor_id().filter(actor_id)
    }
}
